Added background color to the third section in index.less. Aligned experience and education sections using LESS.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="#">Contact</a>
       </nav>
     </header>
+
     <section class="first">
       <header id="name">
         <h1>Shayne Smith</h1>
@@ -36,14 +37,34 @@
         <p>www.shaynesmith.io</p>
       </header><!-- this closes the second header tag -->
     </section><!-- this closes the first section tag -->
+
     <section class="second">
       <div class="experience">
         <h2>Experience</h2>
+
+        <ul>
+          <li>Sterling Resume Services | Co-Founder & CEO</li>
+          <li>test</li>
+          <li>test</li>
+          <li>test</li>
+          <li>test</li>
+          <li>test</li>
+        </ul>
       </div><!-- this closes the experience div tag -->
       <div class="education">
         <h2>Education and Training</h2>
+
+        <ul>
+          <li>Lambda School | Full Stack Web Development</li>
+          <li>Vanderbilt University | Engineering Science</li>
+          <li>test</li>
+          <li>test</li>
+          <li>test</li>
+          <li>test</li>
+        </ul>
       </div><!-- this closes the education div tag -->
     </section><!-- this closes the second section tag -->
+
     <section class="third">
       <div class="skills">
         <h2>Skills</h2>
