Completed mobile version (max-width 500px).

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
         <ul>
           <li>Sterling Resume Services | Co-Founder & CEO</li>
-          <li>test</li>
-          <li>test</li>
-          <li>test</li>
-          <li>test</li>
-          <li>test</li>
+          <li>2017 - Present</li>
+          <li>Great Northern Building Products | Manufacturing Engineer</li>
+          <li>Summer 2015 & Fall 2016</li>
+          <li>Radioland | GPS Installation Technician</li>
+          <li>2011-2013</li>
         </ul>
       </div><!-- this closes the experience div tag -->
       <div class="education">
@@ -56,11 +56,11 @@
 
         <ul>
           <li>Lambda School | Full Stack Web Development</li>
+          <li>2020</li>
           <li>Vanderbilt University | Engineering Science</li>
-          <li>test</li>
-          <li>test</li>
-          <li>test</li>
-          <li>test</li>
+          <li>2012-2017</li>
+          <li>St. Xavier High School</li>
+          <li>2008-2012</li>
         </ul>
       </div><!-- this closes the education div tag -->
     </section><!-- this closes the second section tag -->
@@ -68,10 +68,24 @@
     <section class="third">
       <div class="skills">
         <h2>Skills</h2>
+
+        <ul>
+          <li>Full Stack Web Development</li>
+          <li>Front End</li>
+          <li>Back End</li>
+          <li>UI/UX</li>
+          <li>React</li>
+          <li>Redux</li>
+          <li>Node.js</li>
+        </ul>
       </div><!-- this closes the skills div tag -->
-      <div class="awards">
-        <h2>Awards</h2>
-      </div><!-- this closes the awards div tag -->
+      <div class="intro">
+        <h2>Introduction</h2>
+
+        <p>
+          Professional Software Engineer with a year of intensive programming experience and leading a software team through Lambda School. Strong attention to detail that leads to crisp, clean, DRY code. Constantly problem-solving and learning new skills in order to stay up-to-date with the latest software trends. 
+        </p>
+      </div><!-- this closes the intro div tag -->
     </section><!-- this closes the third section tag -->
   </div>
 </body>
