Updated the links in the navigation section to navigate to various spots on the page.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <header class="navigation">
       <nav>
         <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contact</a>
+        <a href="#intro">About</a>
+        <a href="#experience">Portfolio</a>
+        <a href="#contact">Contact</a>
       </nav>
     </header>
 
